token add, set, and remove commands